@@ -1,0 +1,25 @@
+.objc_class_name_WebBookmark
+.objc_class_name_WebBookmarkGroup
+.objc_class_name_WebClickPolicy
+.objc_class_name_WebContentPolicy
+.objc_class_name_WebController
+.objc_class_name_WebCoreStatistics
+.objc_class_name_WebDOMNode
+.objc_class_name_WebDataSource
+.objc_class_name_WebDefaultContextMenuHandler
+.objc_class_name_WebDefaultPolicyHandler
+.objc_class_name_WebFileURLPolicy
+.objc_class_name_WebFrame
+.objc_class_name_WebHTMLView
+.objc_class_name_WebHistory
+.objc_class_name_WebHistoryItem
+.objc_class_name_WebIconLoader
+.objc_class_name_WebKitStatistics
+.objc_class_name_WebLoadProgress
+.objc_class_name_WebPreferences
+.objc_class_name_WebRenderNode
+.objc_class_name_WebStandardPanels
+.objc_class_name_WebStringTruncator
+.objc_class_name_WebURLsWithTitles
+.objc_class_name_WebView
+_WebKitLog
