@@ -1,3 +1,10 @@
+2002-08-05  Richard Williamson (Home)  <rjw@apple.com>
+
+        Added exported symbols file.
+        
+        * WebKit.exp: Added.
+        * WebKit.pbproj/project.pbxproj:
+
 2002-08-05  Darin Adler  <darin@apple.com>
 
 	- fixed 3014122 -- spinner never stops spinning when iframe has URL with bad path
